@@ -207,3 +207,4 @@ shady-skin Revision History
 
 2016-02-05:
 - Fixed conditions in displaymenudetailrecording
+- Fixed conditions in displaymenudetailepg and tvguideng-detail
